--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Je hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
   "Apply template": "Sjabloon toepassen",
+  "Disconnect": "Ontkoppel",
   "Disconnect analytics": "Analytics ontkoppelen",
   "Home": "Startscherm",
   "Drafts": "Concepten",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
   "Install now": "Nu installeren",
-  "Disconnect": "Ontkoppel",
-  "Disconnecting": "Ontkoppelen",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
-  "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
   "Deleted Collection": "Verwijderde Collectie",
   "Untitled": "Naamloos",
   "Unpin": "Losmaken",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Zoom in": "Inzoomen",
   "Zoom out": "Uitzoomen",
+  "Edit diagram": "Edit diagram",
   "Close": "Sluiten",
   "Previous": "Vorige",
   "Next": "Volgende",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Weet je zeker dat je de token {{ tokenName }} wilt intrekken?",
   "Disconnect integration": "Ontkoppel integratie",
   "Connected": "Verbonden",
+  "Disconnecting": "Ontkoppelen",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
+  "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
   "Allowed domains": "Toegestane domeinen",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domeinen die moeten kunnen worden toegestaan om nieuwe accounts met behulp van SSO te maken. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
   "Remove domain": "Domein verwijderen",
@@ -1220,6 +1221,9 @@
   "Expires today": "Verloopt vandaag",
   "Expires tomorrow": "Verloopt morgen",
   "Expires {{ date }}": "Verlopen {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nieuw kenmerk",
   "Paper size": "Papierformaat",
   "Ask AI \"{{question}}\"": "Vraag AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} door jou aangemaakt",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} door {{ user }} aangemaakt",
   "Caption": "Onderschrift",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Fout bij laden van gegevens"
 }
