fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Opuściłeś udostępniony dokument",
   "Could not leave document": "Nie udało się opuścić dokumentu",
   "Apply template": "Użyj szablonu",
+  "Disconnect": "Rozłącz",
   "Disconnect analytics": "Odłącz analizę",
   "Home": "Strona Główna",
   "Drafts": "Kopie robocze",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Nie można załadować kolekcji, proszę odświeżyć aplikację",
   "Start view": "Widok startowy",
   "Install now": "Zainstaluj teraz",
-  "Disconnect": "Rozłącz",
-  "Disconnecting": "Rozłączanie",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Czy na pewno chcesz odłączyć integrację <em>{{ service }}</em>?",
-  "This will stop sending analytics events to the configured instance.": "To zatrzyma wysyłanie zdarzeń analitycznych do skonfigurowanej instancji.",
   "Deleted Collection": "Usunięta kolekcja",
   "Untitled": "Bez tytułu",
   "Unpin": "Odepnij",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Przeglądaj, nawiguj lub pobierz obrazy w dokumencie",
   "Zoom in": "Powiększ",
   "Zoom out": "Pomniejsz",
+  "Edit diagram": "Edit diagram",
   "Close": "Zamknij",
   "Previous": "Poprzedni",
   "Next": "Następny",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Czy na pewno chcesz unieważnić token {{ tokenName }}?",
   "Disconnect integration": "Rozłącz integrację",
   "Connected": "Połączono",
+  "Disconnecting": "Rozłączanie",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Czy na pewno chcesz odłączyć integrację <em>{{ service }}</em>?",
+  "This will stop sending analytics events to the configured instance.": "To zatrzyma wysyłanie zdarzeń analitycznych do skonfigurowanej instancji.",
   "Allowed domains": "Dozwolone domeny",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domeny, które powinny być dozwolone do tworzenia nowych kont przy użyciu SSO. Zmiana tego ustawienia nie wpływa na istniejące konta użytkowników.",
   "Remove domain": "Usuń domenę",
@@ -1220,6 +1221,9 @@
   "Expires today": "Wygasa dzisiaj",
   "Expires tomorrow": "Wygasa jutro",
   "Expires {{ date }}": "Wygasa {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Nowy atrybut",
   "Paper size": "Format papieru",
   "Ask AI \"{{question}}\"": "Zapytaj AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Utworzyłeś {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} utworzył {{ timeAgo }}",
   "Caption": "Podpis",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Otwórz",
   "Error loading data": "Błąd ładowania danych"
 }
