--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "Disconnect": "Desligado",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Página inicial",
   "Drafts": "Rascunhos",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Não foi possível carregar as Coleções, recarregue a aplicação",
   "Start view": "Vista inicial",
   "Install now": "Instalar agora",
-  "Disconnect": "Desligado",
-  "Disconnecting": "A desligar",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Coleção eliminada",
   "Untitled": "Sem título",
   "Unpin": "Tirar pino",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Fechar",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Tem certeza que quer revogar o token {{ tokenName }}?",
   "Disconnect integration": "Desligar integração",
   "Connected": "Ligado",
+  "Disconnecting": "A desligar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Domínios permitidos",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Os domínios que devem ser autorizados a criar contas usando SSO. Alterar esta configuração não afeta as contas de utilizador existentes.",
   "Remove domain": "Remover o domínio",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expira hoje",
   "Expires tomorrow": "Expira amanhã",
   "Expires {{ date }}": "Expira em {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Criou à {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} criado à {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
