--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Du har lämnat det delade dokumentet",
   "Could not leave document": "Kunde inte lämna dokument",
   "Apply template": "Använd mall",
+  "Disconnect": "Koppla från",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Hem",
   "Drafts": "Utkast",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Samlingarna kunde inte laddas, ladda om appen",
   "Start view": "Startvy",
   "Install now": "Installera nu",
-  "Disconnect": "Koppla från",
-  "Disconnecting": "Bortkopplar",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Är du säker på att du vill koppla från <em>{{ service }}</em>-integrationen?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Raderad samling",
   "Untitled": "Utan titel",
   "Unpin": "Lossa",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Stäng",
   "Previous": "Föregående",
   "Next": "Nästa",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Är du säker på att du vill återkalla {{ tokenName }} -token?",
   "Disconnect integration": "Koppla från integration",
   "Connected": "Ansluten",
+  "Disconnecting": "Bortkopplar",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Är du säker på att du vill koppla från <em>{{ service }}</em>-integrationen?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Tillåtna domäner",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "De domäner som bör tillåtas att skapa nya konton med SSO. Ändra denna inställning påverkar inte befintliga användarkonton.",
   "Remove domain": "Ta bort domän",
@@ -1220,6 +1221,9 @@
   "Expires today": "Går ut idag",
   "Expires tomorrow": "Går ut imorgon",
   "Expires {{ date }}": "Utgår {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du skapade {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} skapade {{ timeAgo }}",
   "Caption": "Bildtext",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Öppna",
   "Error loading data": "Fel vid inläsning av data"
 }
