--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Paylaşılan belgeden ayrıldınız",
   "Could not leave document": "Belgeden ayrılamadı",
   "Apply template": "Şablonu uygula",
+  "Disconnect": "Bağlantıyı kes",
   "Disconnect analytics": "Analitiği kes",
   "Home": "Anasayfa",
   "Drafts": "Taslaklar",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Koleksiyonlar yüklenemedi, lütfen uygulamayı yeniden yükleyin",
   "Start view": "Başlangıç görünümü",
   "Install now": "Şimdi yükle",
-  "Disconnect": "Bağlantıyı kes",
-  "Disconnecting": "Bağlantı kesiliyor",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "<em>{{ service }}</em> entegrasyonunun bağlantısını kesmek istediğinizden emin misiniz?",
-  "This will stop sending analytics events to the configured instance.": "Bu, yapılandırılan örneğe analitik olayları göndermeyi durduracaktır.",
   "Deleted Collection": "Silinmiş Koleksiyon",
   "Untitled": "Başlıksız",
   "Unpin": "Sabitlemeyi kaldır",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Belgedeki görselleri görüntüleyin, gezinin veya indirin",
   "Zoom in": "Yakınlaştır",
   "Zoom out": "Uzaklaştır",
+  "Edit diagram": "Edit diagram",
   "Close": "Kapat",
   "Previous": "Önceki",
   "Next": "Sonraki",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} belirtecini iptal etmek istediğinizden emin misiniz?",
   "Disconnect integration": "Entegrasyon bağlantısını kes",
   "Connected": "Bağlandı",
+  "Disconnecting": "Bağlantı kesiliyor",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "<em>{{ service }}</em> entegrasyonunun bağlantısını kesmek istediğinizden emin misiniz?",
+  "This will stop sending analytics events to the configured instance.": "Bu, yapılandırılan örneğe analitik olayları göndermeyi durduracaktır.",
   "Allowed domains": "İzin verilen alan adları",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "SSO kullanarak yeni hesap oluşturmasına izin verilmesi gereken alan adları. Bu ayarın değiştirilmesi mevcut kullanıcı hesaplarını etkilemez.",
   "Remove domain": "Alan adını kaldır",
@@ -1220,6 +1221,9 @@
   "Expires today": "Bugün sona eriyor",
   "Expires tomorrow": "Yarın sona eriyor",
   "Expires {{ date }}": "{{ date }} tarihinde sona eriyor",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "Yeni özellik",
   "Paper size": "Kağıt boyutu",
   "Ask AI \"{{question}}\"": "Yapay Zekaya Sor \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Siz {{ timeAgo }} önce oluşturdunuz",
   "{{ user }} created {{ timeAgo }}": "{{ user }} {{ timeAgo }} önce oluşturdu",
   "Caption": "Altyazı",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Aç",
   "Error loading data": "Veri yüklenirken hata"
 }
