--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Ви залишили спільний документ",
   "Could not leave document": "Не вдалося покинути документ",
   "Apply template": "Застосувати шаблон",
+  "Disconnect": "Від'єднатись",
   "Disconnect analytics": "Від'єднати аналітику",
   "Home": "Головна",
   "Drafts": "Чернетки",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Не вдалося завантажити колекції. Перезавантажте програму",
   "Start view": "Почати перегляд",
   "Install now": "Встановити зараз",
-  "Disconnect": "Від'єднатись",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Видалена колекція",
   "Untitled": "Без назви",
   "Unpin": "Відкріпити",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Закрити",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Ви впевнені, що хочете відкликати {{ tokenName }}  токен?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Підключено",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Дозволені домени",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Домени, яким має бути дозволено створювати нові облікові записи за допомогою системи єдиного входу. Зміна цього параметра не впливає на наявні облікові записи користувачів.",
   "Remove domain": "Видалити домен",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Ви створили {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} створив {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
