--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "您已退出共享文档",
   "Could not leave document": "无法退出文档",
   "Apply template": "应用模板",
+  "Disconnect": "断开连接",
   "Disconnect analytics": "断开分析服务连接",
   "Home": "主页",
   "Drafts": "草稿箱",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
   "Install now": "立即安装",
-  "Disconnect": "断开连接",
-  "Disconnecting": "正在断开连接",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
-  "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
   "Deleted Collection": "删除文档集",
   "Untitled": "无标题",
   "Unpin": "取消置顶",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "浏览、查看或下载文档中的图片",
   "Zoom in": "放大",
   "Zoom out": "缩小",
+  "Edit diagram": "Edit diagram",
   "Close": "关闭",
   "Previous": "上一个",
   "Next": "下一个",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "确认吊销这个 {{ tokenName }} token 吗？",
   "Disconnect integration": "断开集成",
   "Connected": "已连接",
+  "Disconnecting": "正在断开连接",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "您确定要移除与 <em>{{ service }}</em> 的集成吗？",
+  "This will stop sending analytics events to the configured instance.": "这将停止向配置实例发送分析事件。",
   "Allowed domains": "允许的域",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "应该允许使用 SSO 创建新帐户的域。更改此设置不会影响现有用户帐户。",
   "Remove domain": "删除域",
@@ -1220,6 +1221,9 @@
   "Expires today": "今天过期",
   "Expires tomorrow": "明天过期",
   "Expires {{ date }}": "{{date}} 到期",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 由你创建",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 创建",
   "Caption": "说明",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "打开",
   "Error loading data": "加载数据时出错"
 }
