--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "您離開了共享的文件",
   "Could not leave document": "無法離開文件",
   "Apply template": "Apply template",
+  "Disconnect": "解除連結",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "首頁",
   "Drafts": "草稿",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "文件集無法被載入，請重新整理 App",
   "Start view": "初始介面",
   "Install now": "立即安裝",
-  "Disconnect": "解除連結",
-  "Disconnecting": "正在中斷",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "刪除的文件集",
   "Untitled": "無標題",
   "Unpin": "取消釘選",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "關閉",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "您確定要撤銷 {{ tokenName }} 權杖嗎？",
   "Disconnect integration": "中斷整合",
   "Connected": "已連接",
+  "Disconnecting": "正在中斷",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "域名白名單",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "應該要可以使用SSO建立新帳號的網域。更改這個並不會影響現有的帳號。",
   "Remove domain": "移除網域",
@@ -1220,6 +1221,9 @@
   "Expires today": "今天到期",
   "Expires tomorrow": "明天到期",
   "Expires {{ date }}": "{{ date }} 到期",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 由您新增",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 新增",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
