fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Không thể rời tài liệu này",
   "Apply template": "Áp dụng mẫu",
+  "Disconnect": "Ngắt kết nối",
   "Disconnect analytics": "Ngắt kết nối thống kê",
   "Home": "Trang chủ",
   "Drafts": "Bản nháp",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Không thể tải bộ sưu tập, vui lòng tải lại ứng dụng",
   "Start view": "Bắt đầu xem",
   "Install now": "Cài đặt ngay",
-  "Disconnect": "Ngắt kết nối",
-  "Disconnecting": "Disconnecting",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
-  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Deleted Collection": "Xóa Bộ Sưu Tập",
   "Untitled": "Chưa đặt tên",
   "Unpin": "Bỏ ghim",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Đóng",
   "Previous": "Previous",
   "Next": "Next",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Bạn có chắc chắn muốn thu hồi Token {{ tokenName }} không?",
   "Disconnect integration": "Disconnect integration",
   "Connected": "Đã kết nối",
+  "Disconnecting": "Disconnecting",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
+  "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
   "Allowed domains": "Các tên miền cho phép",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Các miền được phép tạo tài khoản mới bằng SSO. Việc thay đổi cài đặt này không ảnh hưởng đến các tài khoản người dùng hiện có.",
   "Remove domain": "Xóa tên miền",
@@ -1220,6 +1221,9 @@
   "Expires today": "Expires today",
   "Expires tomorrow": "Expires tomorrow",
   "Expires {{ date }}": "Expires {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
   "Caption": "Caption",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
