fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "شما از سند مشترک خارج شده‌اید",
   "Could not leave document": "امکان خروج از سند وجود ندارد",
   "Apply template": "اعمال قالب",
+  "Disconnect": "قطع اتصال",
   "Disconnect analytics": "قطع اتصال تحلیل‌گر",
   "Home": "خانه",
   "Drafts": "پیش‌نویس‌ها",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "مجموعه‌ ها بارگذاری نمی‌شوند، لطفاً برنامه را دوباره بارگیری کنید",
   "Start view": "نمای شروع",
   "Install now": "اکنون نصب شود",
-  "Disconnect": "قطع اتصال",
-  "Disconnecting": "در حال قطع اتصال",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "آیا مطمئن هستید که می‌خواهید یکپارچه‌سازی <em>{{ service }}</em> را قطع کنید؟",
-  "This will stop sending analytics events to the configured instance.": "با این کار، ارسال رویدادهای تحلیلی به نمونهٔ پیکربندی‌شده متوقف می‌شود.",
   "Deleted Collection": "مجموعه‌های حذف شده",
   "Untitled": "بدون عنوان",
   "Unpin": "برداشتن سنجاق",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "مشاهده، مرور یا دانلود تصاویر سند",
   "Zoom in": "بزرگ‌نمایی",
   "Zoom out": "کوچک‌نمایی",
+  "Edit diagram": "Edit diagram",
   "Close": "بستن",
   "Previous": "قبلی",
   "Next": "بعدی",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "آیا مطمئن هستید که می‌خواهید توکن {{ tokenName }} را لغو کنید؟",
   "Disconnect integration": "قطع ادغام",
   "Connected": "متصل شد",
+  "Disconnecting": "در حال قطع اتصال",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "آیا مطمئن هستید که می‌خواهید یکپارچه‌سازی <em>{{ service }}</em> را قطع کنید؟",
+  "This will stop sending analytics events to the configured instance.": "با این کار، ارسال رویدادهای تحلیلی به نمونهٔ پیکربندی‌شده متوقف می‌شود.",
   "Allowed domains": "دامنه‌های مجاز",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "دامنه‌هایی که باید اجازه ایجاد حساب‌های جدید با استفاده از SSO را داشته باشند. تغییر این تنظیمات بر حساب‌های کاربری موجود تأثیری نخواهد داشت.",
   "Remove domain": "حذف دامنه",
@@ -1220,6 +1221,9 @@
   "Expires today": "امروز منقضی می شود",
   "Expires tomorrow": "فردا منقضی می شود",
   "Expires {{ date }}": "منقضی می شود {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "ویژگی جدید",
   "Paper size": "سایز کاغذ",
   "Ask AI \"{{question}}\"": "از هوش مصنوعی بپرسید \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "شما {{ timeAgo }} ایجاد کردید",
   "{{ user }} created {{ timeAgo }}": "{{ user }} {{ timeAgo }} ایجاد کرد",
   "Caption": "زیرنویس",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "باز کردن",
   "Error loading data": "خطا در بارگذاری دیتا"
 }
