fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -113,6 +113,7 @@
   "You have left the shared document": "Du har forlatt det delte dokumentet",
   "Could not leave document": "Kunne ikke forlate dokument",
   "Apply template": "Bruk mal",
+  "Disconnect": "Koble fra",
   "Disconnect analytics": "Koble fra analysedata",
   "Home": "Hjem",
   "Drafts": "Utkast",
@@ -213,10 +214,6 @@
   "Collections could not be loaded, please reload the app": "Samlinger kunne ikke lastes inn, vennligst last inn appen på nytt",
   "Start view": "Startvisning",
   "Install now": "Installer nå",
-  "Disconnect": "Koble fra",
-  "Disconnecting": "Kobler fra",
-  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Er du sikker på at du vil koble fra <em>{{ service }}</em>-integrasjonen?",
-  "This will stop sending analytics events to the configured instance.": "Dette vil slutte å sende analytiske hendelser til den konfigurerte instansen.",
   "Deleted Collection": "Slettet samling",
   "Untitled": "Uten tittel",
   "Unpin": "Løsne",
@@ -325,6 +322,7 @@
   "View, navigate, or download images in the document": "Vis, naviger, eller last ned bilder i dokumentet",
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
+  "Edit diagram": "Edit diagram",
   "Close": "Lukk",
   "Previous": "Forrige",
   "Next": "Neste",
@@ -979,6 +977,9 @@
   "Are you sure you want to revoke the {{ tokenName }} token?": "Er du sikker på at du vil tilbakekalle {{ tokenName }} token?",
   "Disconnect integration": "Koble fra integrasjon",
   "Connected": "Tilkoblet",
+  "Disconnecting": "Kobler fra",
+  "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Er du sikker på at du vil koble fra <em>{{ service }}</em>-integrasjonen?",
+  "This will stop sending analytics events to the configured instance.": "Dette vil slutte å sende analytiske hendelser til den konfigurerte instansen.",
   "Allowed domains": "Tillatte domener",
   "The domains which should be allowed to create new accounts using SSO. Changing this setting does not affect existing user accounts.": "Domenene som skal tillates å opprette nye kontoer ved bruk av SSO. Å endre denne innstillingen påvirker ikke eksisterende brukerkontoer.",
   "Remove domain": "Fjern domene",
@@ -1220,6 +1221,9 @@
   "Expires today": "Utløper i dag",
   "Expires tomorrow": "Utløper i morgen",
   "Expires {{ date }}": "Utløper {{ date }}",
+  "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.": "Configure a custom Diagrams.net installation URL to use your own self-hosted instance for embedding diagrams in your documents.",
+  "Installation URL": "Installation URL",
+  "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net": "The URL of your Diagrams.net installation. Leave empty to use the cloud hosted app.diagrams.net",
   "New attribute": "New attribute",
   "Paper size": "Paper size",
   "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
@@ -1369,6 +1373,8 @@
   "You created {{ timeAgo }}": "Du opprettet {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} opprettet {{ timeAgo }}",
   "Caption": "Bildetekst",
+  "Empty diagram": "Empty diagram",
+  "Double click to edit": "Double click to edit",
   "Open": "Åpen",
   "Error loading data": "Feil ved lasting av data"
 }
