Add confirmation toast

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -113,10 +113,9 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
-  "Disconnect": "Disconnect",
-  "Add custom emoji": "Add custom emoji",
   "New emoji": "New emoji",
   "Upload emoji": "Upload emoji",
+  "Disconnect": "Disconnect",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Drafts",
@@ -618,6 +617,7 @@
   "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Enable embeds",
   "Delete Emoji": "Delete Emoji",
+  "Emoji deleted": "Emoji deleted",
   "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
   "File": "File",
   "Group members": "Group members",
