fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -936,7 +936,7 @@
   "Past year": "Elmúlt év",
   "Any time": "Bármikor",
   "Remove document filter": "Remove document filter",
-  "Any status": "Any status",
+  "Any status": "Bármilyen állapot",
   "Remove search": "Remove search",
   "Any author": "Bármely szerző",
   "Search titles only": "Keresés csak címekben",
