--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -259,16 +259,14 @@
   "Please enter a name for the emoji": "Please enter a name for the emoji",
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
-  "Failed to create emoji": "Failed to create emoji",
   "Uploading": "Uploading",
   "Add emoji": "Add emoji",
-  "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.": "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.",
-  "Emoji name": "Emoji name",
+  "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.": "The emoji name should be unique and contain only lowercase letters, numbers, and underscores.",
   "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
   "Click or drag an image here": "Click or drag an image here",
-  "PNG, JPG, GIF, or WebP up to 1MB": "PNG, JPG, GIF, or WebP up to 1MB",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Module failed to load",
   "Loading Failed": "Loading Failed",
