--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -256,6 +256,8 @@
   "Currently editing": "Currently editing",
   "Currently viewing": "Currently viewing",
   "Viewed {{ timeAgo }}": "Viewed {{ timeAgo }}",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
+  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
   "Please enter a name for the emoji": "Please enter a name for the emoji",
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
@@ -265,7 +267,7 @@
   "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
   "Click or drag to replace": "Click or drag to replace",
   "Drop the image here": "Drop the image here",
-  "Click or drag an image here": "Click or drag an image here",
+  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
   "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Module failed to load",
